tests/parse_print/random_perturb/set01/delete-03/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-03/delete-03.essence:3:20:
expecting domain
Unsupported attributes for set: sze
Only these are supported: size, minSize, maxSize
    find x : set (sze 2) of int(1..3)
                    ^^^^^^^